# RealSR-NCNN-Android

./: colorize-gen.py  patch-strings.py
.github/workflows/: build.yml
RealSR-NCNN-Android-GUI/app/src/main/java/com/tumuyan/ncnn/realsr/: MainActivity.java
RealSR-NCNN-Android-GUI/app/src/main/res/layout/: activity_main.xml
RealSR-NCNN-Android-GUI/app/src/main/res/values/: strings.xml
colorize-ncnn/: CMakeLists.txt  build_android.sh  colorize.cpp  main.cpp
